# decanode

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  Makefile  README.md  TODO-MONERO.md  bugbounty.md  go.mod  go.sum
.gitlab/: CODEOWNERS
.trunk/: trunk.yaml
app/: ante.go  app.go  app_default.go  app_regtest.go  app_test.go  encoding.go  export.go  msg_service_router.go  sim_test.go  test_helpers.go  test_support.go  upgrades.go  wasm.go
app-layer/: README.md
chain/evm/deployment/routerv6/grinder/: Cargo.toml  GPU-TODO.md  README.md  build.sh
chain/evm/deployment/routerv6/grinder/js/: grinder.js  verify.js
chain/evm/deployment/routerv6/grinder/src/: cpu.rs  gpu.metal  gpu.rs  main.rs
ci/: Dockerfile.regtest  Dockerfile.regtest.dockerignore  Dockerfile.simtest  Dockerfile.simtest.dockerignore
cmd/: cmd.go  cmd_chainnet.go  constants.go
common/: address.go  address_chainnet_test.go  address_mainnet.go  address_mainnet_test.go  address_mocknet.go  address_mocknet_test.go  address_test.go  address_treasury_chainnet.go  address_treasury_mainnet.go  address_treasury_mocknet.go  address_treasury_stagenet.go  address_zec_test.go  asset.go  asset_test.go  chain.go  chain_network.go  chain_network_chainnet.go  chain_network_mainnet.go  chain_network_test.go  chain_test.go  coin.go  coin_test.go  common.go  common.pb.go  common_test.go  decimals.go  decimals_test.go  fee.go  gas.go  gas_test.go  invariant.go  math.go  math_test.go  oracle_price.go  oracle_price_test.go  provider.go  pubkey.go  pubkey_mainnet_test.go  pubkey_mocknet_test.go  (+10 more)
(+2548 files in other folders)
