[package]
name = "create2-grinder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sha3 = { version = "0.10", features = ["asm"] }
tiny-keccak = { version = "2", features = ["keccak"] }
rayon = "1.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2"
num_cpus = "1.0"
ctrlc = "3.0"
metal = "0.29"
objc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=apple-m3", "-C", "target-feature=+neon"]
